# backend

./: .env  .gitignore  Dockerfile  README.md  pyproject.toml
app/: main.py  utils.py
app/ai/: ai_service.py  download_models.py  indexchatbots.py  recommendation_service.py  student_matcher.py
app/ai/chatbot/: chatbot.py  database_queries.py  intent_classifier.py  router.py
app/models/: models.py
app/routers/: auth.py  contact.py  dashboard.py  demande_soutien.py  groupe.py  mentor.py  message.py  parrainage.py  profile.py  publication.py  recommendation.py  request.py
app/scoring/: score_system.py
data/: mock.py  motsinterdits.txt  reglesconversation.json  wale.db
