[project]
name = "backend-schoolcollab"
version = "0.1.0"
description = ""
authors = [
    {name = "el hadji",email = "elhadji.sarr@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard] (>=0.115.14,<0.116.0)"
]

[tool.poetry]
packages = [{include = "backend_schoolcollab", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
